--- a/data/cities/mitry-mory/les-serres-de-mitry.yml
+++ b/data/cities/mitry-mory/les-serres-de-mitry.yml
@@ -6,6 +6,6 @@ postcode: "77290"
 city: Mitry-Mory
 street: "Rue Pierre Curie"
 housenumber: 34
-phone: "0986117671"
+phone: "+33986117671"
 opening_hours: "Tu-Fr 09:00-12:00,14:00-19:00; Sa 09:30-12:00,14:00-19:00"
 website: "https://boutique.les-serres-de-mitry.fr/"
