--- a/data/cities/paris/normal.yml
+++ b/data/cities/paris/normal.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue de la Pépinière"
 housenumber: 10
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Th 08:30-20:00; Fr,Sa 08:30-20:30"
 website: ""
