--- a/data/cities/versailles/le-ptit-cordonnier.yml
+++ b/data/cities/versailles/le-ptit-cordonnier.yml
@@ -6,6 +6,6 @@ postcode: "78000"
 city: Versailles
 street: "Rue Royale"
 housenumber: 68
-phone: ""
+phone: "01 39 53 64 68"
 opening_hours: "Tu-Sa 08:00-19:00"
 website: ""
