--- a/data/cities/la-courneuve/aldi.yml
+++ b/data/cities/la-courneuve/aldi.yml
@@ -7,5 +7,5 @@ city: La Courneuve
 street: "Rue de Saint-Denis"
 housenumber: 
 phone: "+33 1 81 09 78 25"
-opening_hours: ""
+opening_hours: "Mo-Sa 08:30-20:00; Su 08:30-12:30"
 website: "https://www.aldi.fr/magasins-et-horaires-d-ouverture.html/l/la-courneuve/1-15-rue-de-saint-denis/3435516"
