--- a/data/cities/marly-le-roi/les-petits-lutins.yml
+++ b/data/cities/marly-le-roi/les-petits-lutins.yml
@@ -6,6 +6,6 @@ postcode: "78160"
 city: Marly-le-Roi
 street: "Place de la Gare"
 housenumber: 
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+33171515447"
+opening_hours: "Tu-Sa 10:00-19:00"
+website: "https://www.librairie-lespetitslutins.fr"
