--- a/data/cities/paris/sex-shop-boulevard-de-clichy-2.yml
+++ b/data/cities/paris/sex-shop-boulevard-de-clichy-2.yml
@@ -1,11 +1,11 @@
-id: 5929858533
+id: 5932468221
 type: node
-latitude: 48.88271
-longitude: 2.33546
-postcode: "75009"
+latitude: 48.88365
+longitude: 2.3339
+postcode: "75018"
 city: Paris
 street: "Boulevard de Clichy"
-housenumber: 33 bis
+housenumber: 70
 phone: ""
 opening_hours: ""
 website: ""
