--- a/data/cities/versailles/linvosges.yml
+++ b/data/cities/versailles/linvosges.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de la Paroisse"
 housenumber: 28
 phone: ""
-opening_hours: "Mo-Sa 10:00-19:00"
+opening_hours: "Mo 14:00-19:00; Tu-Sa 10:00-19:00"
 website: "https://www.linvosges.com/fr/nos-magasins/versailles/"
